
  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-596 fix releaseaudit and automate running (traviscrawford)

  HCAT-587 webhcat controller map task takes too much memory (thejas via traviscrawford)

  HCAT-594 updated documentation, default.xml, job submission fix (thejas via gates)

  HCAT-588 Webhcat server wouldn't start as it is unable to write templeton.log (thejas via traviscrawford)

  HCAT-573 Remove version number from WEBHCAT_JAR in webhcat_config.sh (thejas via traviscrawford)

  HCAT-592 webhcat - handle change in hive table/partition not found error (thejas via gates)

  HCAT-554 Loading data using HCatLoader() from a table on non default namenode fails. (amalakar via avandana)

  HCAT-586 checkstyle fails every time complaining that it's own header file does not have the proper header (gates)

  HCAT-580 Optimizations in HCAT-538 break e2e tests (daijy via gates)

  HCAT-583 e2e tests do not build (gates)

  HCAT-577 HCatContext causes persistance of undesired jobConf parameters (khorgath via gates)

  HCAT-584 Changes in HCAT-538 break Pig stores into non-partitioned tables (gates)

  HCAT-576 HCATALOG-527 Broke backward compatibility (gates)

  HCAT-567 HCatClient must allow retrieval of multiple partitions using a partial partition spec.(mithun via avandana)

  HCAT-556 HCatalog-trunk doesn't build against Hive-0.10.0 (mithun via avandana)

  HCAT-566 HCatTable doesn't report partition columns correctly. (mithun via traviscrawford)

  HCAT-562 HCatClient should allow for a table's message-topic-name to be queried for. (mithunr via avandana)

  HCAT-561 HCatClient should differentiate between "partition not available" and other generic errors.(mithunr via avandana)
